Freedom Sanbox Ant Deploy/src/objects/Investment_Asset__c.object
<CustomObject>
    <fields>
        <fullName>AMC_Name_Text__c</fullName>
        <label>AMC Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMC Name</label>
        <referenceTo>AMC_Name__c</referenceTo>
        <relationshipLabel>Investment Assets</relationshipLabel>
        <relationshipName>Investment_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>To be grown till maturity and continue saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be grown till maturity but stop saving more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (Align to goal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (sell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold (Align to goal)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <summarizedField>GoalInvestmentAssetAssociation__c.Allocation__c</summarizedField>
        <summaryForeignKey>GoalInvestmentAssetAssociation__c.Investment_Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBI Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Gains Tax Saving Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Convertible Debentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Monthly Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBI Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Gains Tax Saving Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Convertible Debentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Monthly Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coupon_Rate__c</fullName>
        <label>Coupon Rate (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_NAV__c</fullName>
        <label>Current NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmergencyFundAction__c</fullName>
        <label>EmergencyFundAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investment Assets</relationshipLabel>
        <relationshipName>Investment_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Face_Value__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FundValue__c</fullName>
        <formula>Units__c *  Current_NAV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FundValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Investment Assets</relationshipLabel>
        <relationshipName>Investment_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Include_In_HLV_Inv_Asset__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To include only checked assets in HLV calculations</description>
        <label>Include In HLV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Value__c</fullName>
        <label>Maturity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_SIP_Amount__c</fullName>
        <label>Monthly SIP Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_NAV__c</fullName>
        <label>Purchase NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remove_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIP_Date__c</fullName>
        <label>SIP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheme_Name_Text__c</fullName>
        <label>Scheme Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheme_Type__c</fullName>
        <label>Scheme Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equity - Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Monthly Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Value__c</fullName>
        <formula>Quantity__c   *   Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalAsset__c</fullName>
        <description>Formula to calculate stock , Mutual Fund and Fixed Income total for a given record.</description>
        <formula>IF(CONTAINS(RecordTypeId , &apos;01220000000HYx5&apos; ) ,  Quantity__c  *  Current_Price__c ,
            IF(CONTAINS(RecordTypeId , &apos;01220000000HYx4&apos; ),  Units__c *  Current_NAV__c,
                         IF(CONTAINS(RecordTypeId, &apos;01220000000HYx3&apos; ),   Face_Value__c *  Quantity__c ,
                                    IF(CONTAINS(RecordTypeId, &apos;012W00000004OxK&apos; ),   Quantity__c  *  Current_Price__c ,
                                     0)
                          )
             )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalAsset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fixedIncomesValue__c</fullName>
        <formula>Quantity__c  *  Face_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fixedIncomesValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isIncludeActionPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Action Plan</label>
        <type>Checkbox</type>
    </fields>
    <label>Investment Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Investment Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Assets</pluralLabel>
    <recordTypes>
        <fullName>Fixed_Income</fullName>
        <active>true</active>
        <label>Fixed Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gold</fullName>
        <active>true</active>
        <description>Added regarding new FP changes</description>
        <label>Gold and Silver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mutual_Fund</fullName>
        <active>true</active>
        <label>Mutual Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stocks</fullName>
        <active>true</active>
        <label>Stocks</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>